WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159029
Exception is not thrown when shipping method is an invalid amount
https://bugs.webkit.org/show_bug.cgi?id=159029
Summary
Exception is not thrown when shipping method is an invalid amount
Anders Carlsson
Reported
2016-06-22 11:34:45 PDT
Exception is not thrown when shipping method is an invalid amount
Attachments
Patch
(4.31 KB, patch)
2016-06-22 11:36 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-06-22 11:36:53 PDT
Created
attachment 281852
[details]
Patch
Tim Horton
Comment 2
2016-06-22 11:38:44 PDT
Tests!
Anders Carlsson
Comment 3
2016-06-22 11:43:30 PDT
Committed
r202341
: <
http://trac.webkit.org/changeset/202341
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug