Exception is not thrown when shipping method is an invalid amount https://bugs.webkit.org/show_bug.cgi?id=159029 rdar://problem/26700413

Reviewed by Tim Horton.

* Modules/applepay/PaymentRequest.h:
Change ShippingMethod::amount to be a signed 64-bit integer.

* Modules/applepay/PaymentRequestValidator.cpp:
(WebCore::PaymentRequestValidator::validate):
Call validateShippingMethods.

(WebCore::PaymentRequestValidator::validateShippingMethods):
Validate all the shipping methods.

(WebCore::PaymentRequestValidator::validateShippingMethod):
Check that the amount is >= 0.

* Modules/applepay/PaymentRequestValidator.h:
Add new members.

Canonical link: https://commits.webkit.org/177108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202341 268f45cc-cd09-0410-ab3c-d52691b4dbfc